--- a/src/app/header-nav/header-nav.component.css
+++ b/src/app/header-nav/header-nav.component.css
@@ -1,490 +1,94 @@
-@media screen and (min-width: 390px) and (max-width: 768px) {
-/* navbar principal */
-.imgProfile {
-  order: 2;
-}
-
-.burger {
-  order: 3;
-}
-
-.right{
-  display: flex;
-}
-
-.navbar{
-  background-color: white;
-  opacity: 1;
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0px;
-  z-index: 2;
-}
-
-#imgLogo {
-  height: 80px;
-  width: 80px;
-  border-radius: 30%;
-}
-
-.trait_dessus{
-  width: 80%;
-  margin-left: 10%;
-}
-
-/* menu déroulant profil */
-
-.imgProfile>label>img {
-  height: 45px;
-  width: 45px;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-
-.icon2{
-  cursor: pointer;
-}
-
-.nav-menu1{
-  background-color: #00adb5;
-  position: absolute;
-  top: 70px;
-  right: 0;
-  width: 50%;
-  height: 140%;
-  margin-top: 20px;
-  border-radius: 20px;
-  border: 1px solid white;
-  text-align: center;
-
-}
-
-.nav-menu1 a:hover, .show:hover{
-  border-radius: 10%;
-  background: #74c2cc;
-}
-
-.nav-item1 a, .drop-item a, .show{
-  color: white;
-  text-decoration: none;
-  line-height: 70px;
-  font-size: 1.2rem;
-
-
-}
-.nav-menu1, .dropdown{
-  display: none;
-}
-
-/* menu déroulant recherche */
-
-.imgSearch{
-  order: 1;
-  display: flex;
-  justify-content: end;
-  width: 200px;
-  align-items: center;
-}
-
-.imgSearch > button{
-  background-color: rgb(0,0,0,0);
-  border: none;
-}
-.searchContain{
-  height: 100%;
-
-  display: flex;
-  align-items: center;
-}
-
-.searchContain > input{
-  height: 80%;
-  width: 100%;
-  border-radius: 30px;
-  border: 3px solid black;
-  margin-right: 15px;
-}
-
-.imgSearch>label>img{
-  height: 45px;
-  width: 45px;
-  margin-right: 10px;
-}
-
-.icon3{
-  cursor: pointer;
-}
-
-input #search{
-display: none;
-}
-
-/* menu déroulant burger */
-
-.icon{
-  fill: rgb(4, 4, 4);
-  cursor: pointer;
-}
-
- .nav-menu, .dropdown, .bug{
-  display: none;
-}
-
-[id^=btn]:checked + ul{
-  display: block;
-  list-style-type: none;
-}
-
-.nav-menu{
-  background-color: #00adb5;
-  position:absolute;
-  top: 70px;
-  right: 0;
-  width: 50%;
-  margin-top: 20px;
-  border-radius: 30px;
-  border: 1px solid white;
-  text-align: center;
-}
-
-.nav-item a, .drop-item a, .show{
-  color: white;
-  text-decoration: none;
-  line-height: 70px;
-  font-size: 1.2rem;
-  cursor: pointer;
-}
-
-.nav-menu a:hover, .show:hover{
-  border-radius: 10%;
-  background: #74c2cc;
-}
-}
-
-@media screen and (min-width: 768px) and (max-width: 992px) {
-/* navbar principal */
-.imgProfile {
-  order: 2;
-}
-
-.burger {
-  order: 3;
-}
-
-.right{
-  display: flex;
-}
-
-.navbar{
-  background-color: white;
-  opacity: 1;
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0px;
-  z-index: 2;
-}
-
-#imgLogo {
-  height: 80px;
-  width: 80px;
-  border-radius: 30%;
-}
-
-.trait_dessus{
-  width: 80%;
-  margin-left: 10%;
-}
-
-/* menu déroulant profil */
-
-.imgProfile>label>img {
-  height: 45px;
-  width: 45px;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-
-.icon2{
-  cursor: pointer;
-}
-
-.nav-menu1{
-  background-color: #00adb5;
-  position: absolute;
-  top: 70px;
-  right: 0;
-  width: 30%;
-  height: 140%;
-  margin-top: 20px;
-  border-radius: 20px;
-  border: 1px solid white;
-  text-align: center;
-}
-
-.nav-menu1 a:hover, .show:hover{
-  border-radius: 10%;
-  background: #74c2cc;
-}
-
-.nav-item1 a, .drop-item a, .show{
-  color: white;
-  text-decoration: none;
-  line-height: 70px;
-  font-size: 1.2rem;
-
-
-}
-.nav-menu1, .dropdown{
-  display: none;
-}
-
-/* menu déroulant recherche */
-
-.imgSearch{
-  order: 1;
-  display: flex;
-  justify-content: end;
-  width: 200px;
-  align-items: center;
-}
-
-.imgSearch > button{
-  background-color: rgb(0,0,0,0);
-  border: none;
-}
-.searchContain{
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.searchContain > input{
-  height: 80%;
-  border-radius: 30px;
-  border: 3px solid black;
-  margin-right: 15px;
-}
-
-.imgSearch>label>img{
-  height: 45px;
-  width: 45px;
-  margin-right: 10px;
-}
-
-.icon3{
-  cursor: pointer;
-}
-
-input #search{
-display: none;
-}
-
-/* menu déroulant burger */
-
-.icon{
-  fill: rgb(4, 4, 4);
-  cursor: pointer;
-}
-
- .nav-menu, .dropdown, .bug{
-  display: none;
-}
-
-[id^=btn]:checked + ul{
-  display: block;
-  list-style-type: none;
-}
-
-.nav-menu{
-  background-color: #00adb5;
-  position:absolute;
-  top: 70px;
-  right: 0;
-  width: 30%;
-  margin-top: 20px;
-  border-radius: 30px;
-  border: 1px solid white;
-  text-align: center;
-}
-
-.nav-item a, .drop-item a, .show{
-  color: white;
-  text-decoration: none;
-  line-height: 70px;
-  font-size: 1.2rem;
-
-  cursor: pointer;
-}
-
-.nav-menu a:hover, .show:hover{
-  border-radius: 10%;
-  background: #74c2cc;
-}
-}
-
-@media screen and (min-width: 993px) {
-/* navbar principal */
-.imgProfile {
-  order: 2;
-}
-
-.burger {
-  order: 3;
-}
-
-.right{
-  display: flex;
-}
-
-.navbar{
-  background-color: white;
-  opacity: 1;
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0px;
-  z-index: 2;
-}
-
-#imgLogo {
-  height: 80px;
-  width: 80px;
-  border-radius: 30%;
-}
-
-.trait_dessus{
-  width: 80%;
-  margin-left: 10%;
-}
-
-/* menu déroulant profil */
-
-.imgProfile>label>img {
-  height: 45px;
-  width: 45px;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-
-.icon2{
-  cursor: pointer;
-}
-
-.nav-menu1{
-  background-color: #00adb5;
-  position: absolute;
-  top: 70px;
-  right: 0;
-  width: 15%;
-  height: 140%;
-  margin-top: 20px;
-  border-radius: 20px;
-  border: 1px solid white;
-}
-
-.nav-menu1 a:hover, .show:hover{
-  border-radius: 10%;
-  background: #74c2cc;
-}
-
-.nav-item1 a, .drop-item a, .show{
-  color: white;
-  text-decoration: none;
-  line-height: 70px;
-  font-size: 1.2rem;
-  margin-left: 20%;
-}
-.nav-menu1, .dropdown{
-  display: none;
-}
-
-/* menu déroulant recherche */
-
-.imgSearch{
-  order: 1;
-  display: flex;
-  justify-content: end;
-  width: 200px;
-  align-items: center;
-}
-
-.imgSearch > button{
-  background-color: rgb(0,0,0,0);
-  border: none;
-}
-.searchContain{
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.searchContain > input{
-  height: 80%;
-  border-radius: 30px;
-  border: 3px solid black;
-  margin-right: 15px;
-}
-
-.imgSearch>label>img{
-  height: 45px;
-  width: 45px;
-  margin-right: 10px;
-}
-
-.icon3{
-  cursor: pointer;
-}
-
-input #search{
-display: none;
-}
-
-/* menu déroulant burger */
-
-.icon{
-  fill: rgb(4, 4, 4);
-  cursor: pointer;
-}
-
- .nav-menu, .dropdown, .bug{
-  display: none;
-}
-
-[id^=btn]:checked + ul{
-  display: block;
-  list-style-type: none;
-}
-
-.nav-menu{
-  background-color: #00adb5;
-  position:absolute;
-  top: 70px;
-  right: 0;
-  width: 15%;
-  margin-top: 20px;
-  border-radius: 30px;
-  border: 1px solid white;
-}
-
-.nav-item a, .drop-item a, .show{
-  color: white;
-  text-decoration: none;
-  line-height: 70px;
-  font-size: 1.2rem;
-  margin-left: 20%;
-  cursor: pointer;
-}
-
-.nav-menu a:hover, .show:hover{
-  border-radius: 10%;
-  background: #74c2cc;
-}
+nav{
+	background-color: white;
+	opacity: 1;
+	padding: 10px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: sticky;
+	top: 0px;
+	margin-bottom: 2rem;
+	z-index: 2;
+}
+
+img {
+  height: 10vh;
+		cursor: pointer;
+}
+
+#menu__toggle {
+	opacity: 0;
+}
+#menu__toggle:checked + .menu__btn > span {
+	transform: rotate(45deg);
+}
+#menu__toggle:checked + .menu__btn > span::before {
+	top: 0;
+	transform: rotate(0deg);
+}
+#menu__toggle:checked + .menu__btn > span::after {
+	top: 0;
+	transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+	left: 0 !important;
+}
+.menu__btn {
+	position: fixed;
+	top: 40px;
+	left: 40px;
+	width: 40px;
+	height: 50px;
+	cursor: pointer;
+	z-index: 3;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 4px;
+	background-color: #53b2be;
+	transition-duration: .25s;
+}
+.menu__btn > span::before {
+	content: '';
+	top: -8px;
+}
+.menu__btn > span::after {
+	content: '';
+	top: 8px;
+}
+.menu__box {
+	display: block;
+	position: fixed;
+	top: 0;
+	left: -100%;
+	width: 300px;
+	height: 100%;
+	margin: 0;
+	padding: 80px 0;
+	list-style: none;
+	background-color: #ECEFF1;
+	box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+	transition-duration: .25s;
+	z-index: 2;
+}
+.menu__item {
+	display: block;
+	padding: 12px 24px;
+	color: #333;
+	font-family: 'Roboto', sans-serif;
+	font-size: 20px;
+	font-weight: 600;
+	text-decoration: none;
+	transition-duration: .25s;
+}
+.menu__item:hover {
+	background-color: #CFD8DC;
+}
+
+.menu-compte {
+	margin-top: 8rem;
 }
