--- a/src/app/update-sneakers/update-sneakers.component.html
+++ b/src/app/update-sneakers/update-sneakers.component.html
@@ -9,6 +9,9 @@
             <h1>MODIFIER MA SNEAKERS</h1>
             <form [formGroup]="updateSneakersForm">
               <div class="colorForm">
+                <div class="containerImg">
+                  <img [src]="sneakersById?.picture" [alt]="sneakersById?.brand" />
+                </div>
                 <div class="form-group">
                   <label for="picture">Photo</label>
                   <input
@@ -43,7 +46,7 @@
                   </select>
                 </div>
                 <div class="action-buttons">
-                  <button type="submit" (click)="onSubmitUpdateForm()" [disabled]="updateSneakersForm.invalid">Enregistrer votre Sneakers </button>
+                  <button type="submit" (click)="onSubmitUpdateForm()" [disabled]="updateSneakersForm.invalid">Modifier votre Sneakers </button>
                 </div>
               </div>
             </form>
