--- a/src/app/carrousel-room/carrousel-room.component.css
+++ b/src/app/carrousel-room/carrousel-room.component.css
@@ -9,7 +9,7 @@ a {
 
 .carouselContainer {
     width: 80%;
-    margin: 10%;
+    margin: 2% 10% 0% 10%;
 }
 
 .carousel-items {
@@ -49,8 +49,8 @@ h1 {
     margin-bottom: 30px;
     margin-left: 20px;
 }
-  
-@media screen and (min-width: 768px) and (max-width: 992px) {   
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
     div {
         width: 25%;
     }
@@ -61,4 +61,3 @@ h1 {
         width: 20%;
     }
 }
-    
