--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,7 +11,6 @@ width: 250px;
 	margin-top: 20px;
 	margin-bottom:50px;
 	text-align: center;
-	/*box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);*/
 	display: flex;
 	justify-content: space-between;
 }
@@ -85,7 +84,7 @@ width: 250px;
 	color: #EF3B3A;
 }
 body {
-	background: #00adb5; /* fallback for old browsers */
+	background: #00adb5;
 	background: rgb(141,194,111);
 	background: linear-gradient(90deg, rgba(141,194,111,1) 0%, rgba(118,184,82,1) 50%);
 	font-family: "Roboto", sans-serif;
@@ -93,18 +92,28 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-/* Override UGG site */
+.seeMore {
+	display: flex;
+	justify-content: right;
+	margin: 0 5rem 2rem 0;
+}
+
+a {
+	text-decoration: none;
+	color: rgb(173, 173, 173);
+	font-size: 1.3rem;
+}
+
+
 #main {width: 100%; padding:0;}
 .content-asset p {margin:0 auto;}
 .breadcrumb {display:none;}
 
-/* Helpers */
-/**************************/
+
 .margin-top-10 {padding-top:10px;}
 .margin-bot-10 {padding-bottom:10px;}
 
-/* Typography */
-/**************************/
+
 #parallax-world-of-ugg h1 {font-family:'Oswald', sans-serif; font-size:24px; font-weight:400; text-transform: uppercase;
 	color:black; padding:0; margin:0;}
 #parallax-world-of-ugg h2 {font-family:'Oswald', sans-serif; font-size:70px; letter-spacing:10px; text-align:center;
