--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,15 +10,6 @@
 </div>
 
 <div id="parallax-world-of-ugg">
-
-<!--	<section>-->
-<!--		<div class="title">-->
-<!--			<h3>Bienvenue sur</h3>-->
-<!--			<br>-->
-<!--			<h1>SNK Collector</h1>-->
-<!--		</div>-->
-<!--	</section>-->
-
 	<section>
 		<div class="parallax-one">
 			<h2>BIENVENUE SUR SNK Collector</h2>
@@ -52,8 +43,11 @@
 				transformed UGG into a high-end luxury footwear maker. As a fashion brand, UGG advertisements now graced the pages
 			</p>
 			<p class="line-break margin-top-10"></p>
-			<app-carrousel *ngIf="connected"></app-carrousel>
 		</div>
+		<app-carrousel *ngIf="connected"></app-carrousel>
+		<div class="seeMore">
+		<a [routerLink]="['collection']">Voir plus...</a>
+	</div>
 	</section>
 
 	<section>
@@ -71,7 +65,10 @@
 				additional location in Moscow. As the love spread farther East, concept stores were opened in Beijing, Shanghai and
 				</p>
 			<p class="line-break margin-top-10"></p>
-			<app-carrousel-room *ngIf="connected"></app-carrousel-room>
+		</div>
+		<app-carrousel-room *ngIf="connected"></app-carrousel-room>
+		<div class="seeMore">
+			<a [routerLink]="['auctions']">Voir plus...</a>
 		</div>
 	</section>
 </div>
