ajout prix initial dans auction card

--- a/src/app/auction-card/auction-card.component.html
+++ b/src/app/auction-card/auction-card.component.html
@@ -4,6 +4,7 @@
     </div>
     <div class="card-body">
         <h3>{{sneakers?.brand}} - {{sneakers?.model}}</h3>
+								<p>Prix de départ : {{room?.initialPrice | currency: "EUR" }}</p>
         <div class="time">
 									<app-countdown
 									*ngIf="room?.endDate"
