--- a/src/app/sneakers/sneakers.component.html
+++ b/src/app/sneakers/sneakers.component.html
@@ -1,11 +1,13 @@
-
+<div class="btnTop">
 	<button
 	class="btn-back"
 	(click)="backClicked()"
 >
 	Retour
 </button>
-<div class="background">
+	<button class="btn3" [routerLink]="['/sneakers/create']">Ajouter une paire</button>
+</div>
+	<div class="background">
 	<div class="containerSneakers">
 		<div class="containerSneakersDetails">
 			<div class="containerImg">
