--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -180,7 +180,7 @@
 	}
 }
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) {
 	.principal {
 		display: flex;
 		justify-content: space-evenly;
