--- a/src/app/auction-card/auction-card.component.html
+++ b/src/app/auction-card/auction-card.component.html
@@ -4,10 +4,11 @@
     </div>
     <div class="card-body">
         <h3>{{sneakers?.brand}} - {{sneakers?.model}}</h3>
-								<p>Prix de départ : {{room?.initialPrice | currency: "EUR" }}</p>
+								<p >Prix de départ : {{room?.initialPrice | currency: "EUR" }}</p>
+								<h4 *ngIf="roomClosed" > Salle fermée</h4>
         <div class="time">
 									<app-countdown
-									*ngIf="room?.endDate"
+									*ngIf="room?.endDate && roomClosed == false"
 									[endDate]="room?.endDate"
 									style="text-align: center"
 								></app-countdown>
