--- a/src/app/auction-creation/auction-creation.component.html
+++ b/src/app/auction-creation/auction-creation.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="roomForm">
 
         <div class="form-group">
-            <label for="sneakers-select">Choose a sneakers :</label>
+            <label for="sneakers-select">Choisissez une paire :</label>
             <select name="sneakersId" id="sneakers-select" (change)="selectChangeHandler($event)" formControlName="sneakersId">
                 <option default>Choisissez la paire de sneakers</option>
                 <option *ngFor="let sneakers of sneakersByUserId" value="{{sneakers.id}}">
@@ -14,6 +14,7 @@
             <label for="initialPrice">Prix de départ :</label>
             <input id="initialPrice" type="number" formControlName="initialPrice">
         </div>
+								<p>* Les enchères se clôtureront automatiquement au bout de 7 jours.</p>
         <div class="action-buttons">
             <button type="submit" (click)="onSubmitForm()" [disabled]="roomForm.invalid">Enregistrer</button>
         </div>
