--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,8 @@
+<div class="row" *ngIf="showMsg">
+	<p class="alert">
+		<strong>Votre profil a été mis à jour !</strong>
+	</p>
+</div>
 <div class="principal" *ngIf="user">
 	<div class="profile-card">
 		<div class="card-header">
@@ -13,13 +18,12 @@
 			<br>
 			<p>{{user.email}}</p>
 		</div>
-
+		
 		<div class="bottom">
 			<div class="form-card">
 			</div>
 		</div>
 	</div>
-
 	<div class="profile-card2" *ngIf="displayForm">
 		<div class="card-header2">
 			<h2>Modification du profil</h2>
@@ -33,15 +37,15 @@
 					<label for="text">Nom d'utilisateur </label>
 					<input type="text" formControlName="username"/>
 				</div>
-
-			<div class="form-group">
-				<label for="email">Email </label>
-				<input type="email" formControlName="email"/>
-			</div>
-
-			<div id="containerButton">
-				<button type="submit">Valider</button>
-			</div>
+				
+				<div class="form-group">
+					<label for="email">Email </label>
+					<input type="email" formControlName="email"/>
+				</div>
+				
+				<div id="containerButton">
+					<button type="submit">Valider</button>
+				</div>
 			</div>
 		</form>
 	</div>
