petits reglages des familles

--- a/src/app/auction-creation/auction-creation.component.html
+++ b/src/app/auction-creation/auction-creation.component.html
@@ -1,3 +1,4 @@
+<button class="btn-back" (click)="backClicked()">Retour</button>
 <div class="form-card">
     <h2>Créer ma salle d'enchères</h2>
     <form [formGroup]="roomForm">
