--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -68,7 +68,7 @@
 		</div>
 		<app-carrousel-room *ngIf="connected"></app-carrousel-room>
 		<div class="seeMore">
-			<a [routerLink]="['auctions']">Voir plus...</a>
+			<a [routerLink]="['search']">Voir plus...</a>
 		</div>
 	</section>
 </div>
