--- a/src/app/auction-card/auction-card.component.css
+++ b/src/app/auction-card/auction-card.component.css
@@ -46,6 +46,9 @@
 @media screen and (min-width: 768px) {
 
     .card {
-        margin: 2.5rem;
-    }
+					width: 18rem;
+					margin: 2rem;
+					background-color: white;
+					box-shadow: 5px 5px 10px #999;
+	}
 }
