--- a/src/app/auction-creation/auction-creation.component.css
+++ b/src/app/auction-creation/auction-creation.component.css
@@ -1,11 +1,11 @@
 .form-card {
     box-sizing: border-box;
     width: 50%;
-    margin: 10% auto;
+    margin: 8% auto;
     padding: 10px 30px;
     box-shadow: lightgray 4px 4px 20px;
   }
-  
+
   .form-group {
     margin: 10px auto;
     width: 80%;
@@ -13,17 +13,17 @@
     align-items: center;
     justify-content: space-between;
   }
-  
+
   input, textarea {
     width: 50%;
   }
-  
+
   .action-buttons {
     display: flex;
     justify-content: center;
     margin: 5%;
   }
-  
+
   button {
     text-transform: uppercase;
     outline: 0;
@@ -37,7 +37,13 @@
     transition: all 0.3 ease;
     cursor: pointer;
   }
-  
+
   button:hover,.form button:active,.form button:focus {
     background: #00adb5;
   }
+
+		.btn-back {
+			background-color: rgb(186, 186, 186);
+			width: 6rem;
+			margin: 1.3rem 0 1.3rem 2.5rem;
+		}
