--- a/src/app/collection/collection.component.css
+++ b/src/app/collection/collection.component.css
@@ -13,9 +13,8 @@ div {
 
 h1 {
     font-size: 40px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-left: 20px;
+				margin: 0.5rem 0 0.5rem 2rem;
+
 }
 
 #containerButton {
@@ -79,4 +78,10 @@ button:hover,.form button:active,.form button:focus {
     button {
         width: 15%;
       }
+
+						h1 {
+							font-size: 40px;
+							margin: 1rem 0 1rem 5rem;
+
+			}
     }
