--- a/src/app/created-sneakers/created-sneakers.component.html
+++ b/src/app/created-sneakers/created-sneakers.component.html
@@ -36,7 +36,7 @@
 						<input id="size" type="text" formControlName="size" />
 					</div>
 					<div class="form-group">
-						<label for="stateOfWear">Etat sneakers</label>
+						<label for="stateOfWear">État sneakers</label>
 						<select id="stateOfWear" formControlName="stateOfWear">
 							<option
 								id="optionForm"
