--- a/src/app/auction-card/auction-card.component.css
+++ b/src/app/auction-card/auction-card.component.css
@@ -33,10 +33,11 @@
         text-align: center;
         padding: 15px 20px;
         box-sizing: border-box;
+								height: 12rem;
     }
 
     .time {
-        margin: 2rem;
+        margin: 1rem;
     }
 
 				h4 {
