--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -181,7 +181,11 @@
 	.row {
 		padding-left: 2rem;
 		padding-bottom: 0,5rem;
-	}	
+	}
+	
+	.upload {
+		margin-left: 10px;
+	}
 }
 
 @media screen and (min-width: 768px) {
@@ -364,5 +368,9 @@
 	.row {
 		padding-left: 4rem;
 		padding-bottom: 1rem;
+	}
+
+	.upload {
+		margin-left: 10px;
 	}
 }
